force-app/main/default/objects/Project__c/fields/ProjectTechnology__c.field-meta.xml
<CustomField>
    <fullName>ProjectTechnology__c</fullName>
    <label>Project Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tecnologias</valueSetName>
    </valueSet>
</CustomField>